--- a/book_parts/stats/00-numpy-pandas-primer.ipynb
+++ b/book_parts/stats/00-numpy-pandas-primer.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -241,8 +241,8 @@
     "# 书籍的折扣比率\n",
     "discount_rates = np.array([0.1, 0.05, 0.15, 0.05, 0.1])  # 10%, 5%, 15%, 5%, 10%\n",
     "\n",
-    "final_prices = total_sales * (1 - discount_rates)\n",
-    "print(\"折扣后的销售额:\", final_prices)"
+    "final_sales = total_sales * (1 - discount_rates)\n",
+    "print(\"折扣后的销售额:\", final_sales)"
    ]
   },
   {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,10 +271,10 @@
     }
    ],
    "source": [
-    "print(\"折后总销售额(合计):\", final_prices.sum())\n",
-    "print(\"最低折后销售额:\", final_prices.min())\n",
-    "print(\"最高折后销售额:\", final_prices.max())\n",
-    "print(\"平均折后销售额:\", final_prices.mean())"
+    "print(\"折后总销售额(合计):\", final_sales.sum())\n",
+    "print(\"最低折后销售额:\", final_sales.min())\n",
+    "print(\"最高折后销售额:\", final_sales.max())\n",
+    "print(\"平均折后销售额:\", final_sales.mean())"
    ]
   },
   {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "4  Python数据分析     95        25     4.1"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "Name: Book, dtype: object"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "array(['微观经济学', '宏观经济学', '金融学', '会计学', 'Python数据分析'], dtype=object)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
        "RangeIndex(start=0, stop=5, step=1)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
        "4  Python数据分析     95"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "4  Python数据分析     95"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        "2    金融学    100        20     4.8"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "4     95        25"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
        "4  Python数据分析     95        25     4.1"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1122,7 @@
        "4  Python数据分析     95        25     4.1"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
        "4  Python数据分析     95        25     4.1         2375"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1345,7 @@
        "3         会计学     75        10     3.9          750"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1451,7 @@
        "4  Python数据分析     95        25     4.1         2375"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
        "Name: Rating, dtype: bool"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1489,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1581,7 @@
        "4  Python数据分析     95        25   4.100         2375"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1650,7 @@
        "0  计量经济学    110        12     4.2"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1762,7 +1762,7 @@
        "5       计量经济学    110        12     4.2          NaN"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1776,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1831,7 @@
        "2   大学语文        C社"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1938,7 +1938,7 @@
        "4  Python数据分析     95        25     4.1         2375       NaN"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1964,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2083,7 +2083,7 @@
        "4  Python数据分析     95        25     4.1         2375"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
