--- a/book_parts/stats/00-numpy-pandas-primer.ipynb
+++ b/book_parts/stats/00-numpy-pandas-primer.ipynb
@@ -302,7 +302,7 @@
     "\n",
     "**题目 4: 条件选择**\n",
     "\n",
-    "使用 `np.where` 按价格阈值（如 100 元）为每本书生成“高价/低价”标签，并构造按条件折扣后的单价向量。\n",
+    "使用 `np.where` 按价格阈值（如 100 元）为每本书生成“高价/低价”标签，并构造按条件折扣后的单价向量：这里只对高价书使用 `discount_rates` 中的折扣率，低价书保持原价。打印生成的标签数组和折后单价数组。\n",
     "\n",
     "例如：基于当前 `prices = np.array([120, 85, ... ])`，标签可得到 `[\"高价\", \"低价\", ... ]`，按条件折扣后的单价可得到 `[108.0, 85.0, ...]`。\n"
    ]
