聚类和因子分析添加提示

--- a/book_parts/stats/04-clustering.ipynb
+++ b/book_parts/stats/04-clustering.ipynb
@@ -12,6 +12,15 @@
     "2. 聚类不需要先验知识：可以只有特征值的情况下进行分类\n",
     "3. 但聚类只考虑“距离”，不讲“逻辑”：特征接近的就会被归为一类，比如可能会把海豚和其他鱼归为一类。\n",
     "\n",
+    "聚类分析是在**没有预先标签**的情况下，根据多个特征自动把“相似”的个体分成几类，用来发现“类型”或“模式”。当你的问题是“这些企业/顾客/城市能分成几类？各类有什么特点？”而不是“给定特征预测一个数值/标签是多少？”时，就适合使用聚类。\n",
+    "\n",
+    "例如：\n",
+    "\n",
+    "* **顾客分群**：用年消费额、购买频率、客单价、折扣敏感度，把顾客分成“高价值客户”“价格敏感型”“低频边缘客户”等。\n",
+    "* **企业分型**：用资产负债率、ROE、营收增速、市值，把公司分为“高成长型”“稳健型”“高杠杆高风险型”等。\n",
+    "* **城市/地区分类**：用人均 GDP、产业结构、城镇化率、科研投入，把城市分成“服务业主导型”“制造业主导型”“资源型”等。\n",
+    "* **股票风格分群**：用波动率、Beta、估值水平、因子暴露，把股票分成风险收益特征相似的几类，用于资产配置与分散化。\n",
+    "\n",
     "\n",
     "## K-means聚类"
    ]
