--- a/book_parts/stats/05-factor-analysis.ipynb
+++ b/book_parts/stats/05-factor-analysis.ipynb
@@ -17,6 +17,16 @@
     "3. 还有另一种常见的降维方法“主成分分析PCA”，不是本节内容。但是学会本节之后，看PCA的教程也会很容易上手。\n",
     "4. 本节忽略数学过程，主要解释原理和实践。\n",
     "\n",
+    "因子分析是在有很多**高度相关的指标**时，用少数几个“看不见的共同因子”来解释这些指标的共同行为，起到**降维和提炼维度**的作用。当你的问题是“这么多题目/指标，其实背后有几种核心维度？”而不是“这些企业/顾客能分成几类？”时，就适合使用因子分析。\n",
+    "\n",
+    "典型经管应用示例：\n",
+    "\n",
+    "* **顾客满意度问卷**：几十个题目（对质量、价格、服务、便利性等打分），用因子分析提炼出“产品质量因子”“价格感知因子”“服务体验因子”等几个维度，便于企业聚焦改进。\n",
+    "* **员工满意度与组织氛围**：对薪酬、公平、晋升、领导支持、同事关系等评分，用因子分析得到“组织公平感”“领导支持感”“工作投入感”等潜在因子，用来解释离职率或绩效差异。\n",
+    "* **宏观经济指标压缩**：用 GDP 增速、投资、消费、进出口、CPI、M2 等多项指标，提炼出“经济增长因子”“通胀因子”“金融条件因子”，简化后续回归或政策分析。\n",
+    "* **企业信用/风险评分**：把多项财务指标（杠杆、偿债能力、盈利能力、现金流）压缩为一两个“财务健康因子”，再用这些因子构建企业信用评分或违约风险模型。\n",
+    "\n",
+    "\n",
     "\n",
     "## 介绍因子分析\n",
     "\n",
