--- a/book_parts/case_study/36-factor_model.ipynb
+++ b/book_parts/case_study/36-factor_model.ipynb
@@ -6567,6 +6567,8 @@
    "id": "0b72c599",
    "metadata": {},
    "source": [
+    "这里把 10 年期中国国债收益率视作本币无风险利率的近似值，只是为了示范如何从日度利率构造月度无风险收益率。实际研究中，可以根据问题选择短期国债收益率、回购利率等更合适的无风险利率代理。\n",
+    "\n",
     "注意到，这个序列是“每天的年化收益率 * 100”，我们要获得月度收益率，如何做呢？\n",
     "\n",
     "1. 计算日收益率序列\n",
@@ -8143,9 +8145,9 @@
    "source": [
     "## 简单解读\n",
     "\n",
-    "1. 常数项（Alpha）：控制了市场因子后（控制了大盘涨跌的“带动”），这只股票依然每个月能带来3%的超额收益，并且是显著的。\n",
+    "1. 常数项（Alpha）：控制了市场因子后（控制了大盘涨跌的“带动”），这只股票的月度超额收益估计值约为 2.5%（0.025），在 Newey–West 标准误下显著大于 0。\n",
     "\n",
-    "2. 市场因子（Beta）：市场组合每增加1单位超额收益，这只股票会增加1.45单位的超额收益。从CAPM来看，是一个高beta的股票：涨得时候涨得比大盘快，或者是“进取型”“进攻型”股票。"
+    "2. 市场因子（Beta）：市场组合每增加 1 单位超额收益，这只股票平均增加约 1.45 单位超额收益，是一只对市场涨跌相对更敏感的股票。需要注意，Beta 描述的是相对大盘的系统性风险，不等同于总波动率。\n"
    ]
   },
   {
@@ -8161,7 +8163,7 @@
    "id": "01dc8230",
    "metadata": {},
    "source": [
-    "CAPM 大致上是在表达：如果你知道了一只股票的 beta，就能知道它相对大盘的走势。等于说一只股票的风险主要来自大盘，剩下的都是不可解释的随机因素。"
+    "CAPM 大致上是在表达：如果你知道了一只股票的 beta，就能刻画它相对大盘的期望走势。模型假定资产的期望回报完全由对市场组合的暴露决定，其余部分被视为无法通过市场因子解释的残差；现实中，这部分还可能包含尚未建模的风险因子、噪声或口径差异。"
    ]
   },
   {
@@ -9367,12 +9369,12 @@
    "source": [
     "## 简单解读\n",
     "\n",
-    "1. const：常数项（Alpha），这只股票在考虑其他因素后，依然有显著的超额收益，可能来自自行业（新能源/动力电池）、技术领先、政策预期等未被三因子捕捉的东西。\n",
-    "2. index_ret：市场因子（Beta），在考虑其他因素后，这只股票的Beta略小于1，这是一只波动率小于市场平均水平的股票。\n",
-    "3. SMB：市值因子：小于0且显著，在考虑其他因素后，这只股票偏向大盘股风格。\n",
-    "4. HML：价值因子：小于0且显著，在考虑其他因素后，这只股票偏向成长股风格。\n",
+    "1. const：常数项（Alpha）。在控制了市场、规模和价值三个因子之后，这只股票的月度超额收益估计值约为 3%（0.030），在 Newey–West 标准误下显著大于 0，说明模型无法完全解释其平均超额收益，可能与自身行业特征、技术优势或其他未建模因子有关。\n",
+    "2. market return：市场因子（Beta）。在考虑其他因子后，这只股票的 Beta 略小于 1，说明相对于大盘的系统性风险略低于市场平均水平；总波动还同时取决于特异性部分，因此 Beta 并不等同于“总波动率”。\n",
+    "3. SMB：市值因子系数小于 0 且显著，在控制其他因子后，这只股票更接近大盘股风格。\n",
+    "4. HML：价值因子系数小于 0 且显著，在控制其他因子后，这只股票更偏向成长股风格。\n",
     "\n",
-    "这是一只“大盘成长股”，并且有很强的Alpha（3因子模型无法解释的超额收益，每个月多涨3%），对市场相对不敏感（Beta < 1）。\n",
+    "从本例的 FF3 回归结果看，R² 约为 0.55，相比只使用市场因子的 CAPM（R² 约 0.39）有明显提升，但 Alpha 并未显著下降，反而略有上升。这说明，在使用这些指数替代 SMB、HML 的粗略构造下，该股票的平均超额收益仍然难以完全归因于这三类风格因子。\n",
     "\n",
     "\n",
     "\n",
