开头添加知识点

--- a/book_parts/case_study/36-factor_model.ipynb
+++ b/book_parts/case_study/36-factor_model.ipynb
@@ -7,6 +7,13 @@
    "source": [
     "# CAPM和因子模型\n",
     "\n",
+    "## 本节涉及的知识\n",
+    "\n",
+    "- 金融与资产定价：超额收益、无风险利率、市场组合；CAPM 模型中的 $\\alpha$、$\\beta$ 及其经济含义；Fama–French 3 因子（MKT-RF、SMB、HML）的构造思路与“风格画像”（大盘/小盘、价值/成长）。\n",
+    "- 数据与时间序列处理：使用 akshare 获取股票、指数和国债收益率数据；利用 pandas 进行日期索引、按日期切片、日度价格转月度价格（`resample('ME').last()`）、由价格计算收益率（`pct_change()`），以及多序列按日期对齐与合并。\n",
+    "- 统计与回归：用 `statsmodels` 进行 OLS 回归，选择因变量和解释变量、添加常数项，解读回归输出中的系数、t/z 统计量、p 值和 $R^2$；使用 Newey–West（HAC）稳健标准误处理时间序列中的自相关与异方差；理解拟合值与残差的含义。\n",
+    "- 可视化与解读：使用 seaborn / matplotlib 绘制时间序列折线图、散点图配合回归线、直方图与核密度曲线、因子载荷条形图和相关系数热图；通过图形比较 CAPM 与 FF3 在拟合优度和 Alpha 上的差异，直观理解“收益从哪里来”。\n",
+    "\n",
     "## 因子模型简介\n",
     "\n",
     "在实务里，因子模型首先用于**业绩归因**：把一只股票、一个组合或一只基金在某一段时间的**超额收益**，分解成几部分——一部分来自**广泛而稳定地影响许多资产的共同影响因素**（如“大盘整体涨跌”“小盘风格相对大盘”“价值相对成长”等），另一部分是该资产或该管理人特有的成分（策略选择、择时或纯噪声）。  \n",
