--- a/book_parts/case_study/37-investment_clashflow.ipynb
+++ b/book_parts/case_study/37-investment_clashflow.ipynb
@@ -3538,6 +3538,40 @@
     "\n",
     "compare(results = {'(1)':res_single,\"(2)\":reg_single_fe, '(3)':res_basic_fe},stars=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c352bb2",
+   "metadata": {},
+   "source": [
+    "## 课后作业：扩展投资–现金流关系分析\n",
+    "\n",
+    "本小节的代码已经构造了投资强度、现金流强度、杠杆率、规模等变量，并完成了基础的面板回归。请在此基础上，独立完成以下两个扩展练习，并整理为一个可运行的 notebook：\n",
+    "\n",
+    "1. 将托宾Q加入控制变量\n",
+    "\n",
+    "- 数据中已经合并了 `托宾Q值A`，请将其作为投资机会的代理变量加入到基础回归模型中。\n",
+    "- 要求：\n",
+    "  - 在 `df_clean` 的基础上，构造包含 `托宾Q值A` 的回归数据集（注意处理缺失值和极端值，可以与其他连续变量采用相同的 winsor 处理方式）。\n",
+    "  - 在公司固定效应 + 年份固定效应的设定下，估计以下模型：\n",
+    "    - 投资强度 ~ 现金流强度 + 杠杆率 + ln(总资产) + 托宾Q值A\n",
+    "  - 比较加入托宾Q前后，现金流强度系数的大小和显著性是否发生变化，并用简短文字解释你的观察。\n",
+    "\n",
+    "2. 按规模分组的异质性检验\n",
+    "\n",
+    "- 利用 `ln_总资产` 作为公司规模的度量，按照样本内中位数将公司划分为“规模较小”（Small）和“规模较大”（Big）两组。\n",
+    "- 要求：\n",
+    "  - 给出分组方法的具体实现（例如：基于某一年整体样本的中位数，或者基于全样本的中位数），并在代码中清晰标注。\n",
+    "  - 分别在 Small 组和 Big 组样本上，估计与课堂中相同设定的回归模型（至少包括：\n",
+    "    - 投资强度 ~ 现金流强度 + 杠杆率 + ln(总资产)\n",
+    "    - 公司固定效应 + 年份固定效应）。\n",
+    "  - 对比两组样本中现金流强度系数的大小和显著性，讨论投资–现金流敏感性是否存在“规模异质性”。\n",
+    "\n",
+    "提示：\n",
+    "\n",
+    "- 建议在每一步回归前，先输出关键变量的描述性统计和相关性矩阵，检查数据是否合理。\n",
+    "- 在汇总回归结果时，可以使用 `compare` 函数，或者自行整理为表格，方便横向对比不同模型和不同样本组的估计结果。\n"
+   ]
   }
  ],
  "metadata": {
