改了一下首页

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@
 本课程欢迎以及推荐大家大量使用AI辅助学习。
 
 1. AI工具就像新时代的计算器，行业中已经在大量使用。
-2. AI让编程变得前所未有地简单，但前提是你自己要懂，最好你的能力高于AI。
+2. AI让编程变得前所未有地简单，但前提是你自己要懂，起码要能理解AI给你的结果。
 3. 如果你提交一个自己看不懂的作业/成果，你的老师可能放过你，但你的老板肯定不会。
 
 ## 本课程的主要内容：
@@ -25,11 +25,12 @@
 
 1. Python入门
 2. 基础数据处理、绘图和分析
-3. 基础统计分析、聚类、回归等（重写中）
+3. 基础统计分析、聚类、线性回归等
 
 专业部分：
 
-1. 金融类专业：最优组合、量化技术分析和交易策略初步（包括其他增补和调整）
+1. 通用类：投资-现金流关系（真实数据处理和实证分析流程）
+2. 金融类：CAPM和FF3因子模型（时间序列处理和多因子模型）、最优组合（数值方法如插值、最优化和解方程，以及蒙特卡洛模拟）、量化技术分析和交易策略初步（重写中）
 
 其他：看教学情况适时调整。
 
